--- a/contactus.html
+++ b/contactus.html
@@ -6,11 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="aboutus.html">about us</a></li>
-            <li><a href="contactus.html">contact us</a></li>
-    </ul>
- 
+    <h1>this is my contact us page </h1>
 </body>
 </html>
